1、Friendship通讯接口：新增Friendship接口 2、关注列表界面：新增关注列表界面 3、粉丝列表界面：新增粉丝列表界面 4、"我"界面、用户详情界面：增加关注跳转以及粉丝跳转

--- a/app/src/main/res/drawable/btn_follow.xml
+++ b/app/src/main/res/drawable/btn_follow.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:state_selected="false"
         android:state_pressed="false"
         >
         <shape>
@@ -15,6 +16,7 @@
         </shape>
     </item>
     <item
+        android:state_selected="false"
         android:state_pressed="true"
         >
         <shape>
@@ -25,6 +27,19 @@
                 android:radius="15dp" />
             <solid
                 android:color="@color/colorItemNormal" />
+        </shape>
+    </item>
+    <item
+        android:state_selected="true"
+        >
+        <shape>
+            <stroke
+                android:color="@color/colorHighlight"
+                android:width="1dp"/>
+            <corners
+                android:radius="15dp" />
+            <solid
+                android:color="@color/colorHighlight" />
         </shape>
     </item>
 </selector>
