--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -64,15 +64,15 @@
                         app:layout_collapseMode="parallax"/>
                     <Button
                         android:id="@+id/btn_follow"
-                        android:layout_width="60dp"
-                        android:layout_height="30dp"
+                        android:layout_width="@dimen/btn_follow_width"
+                        android:layout_height="@dimen/btn_follow_height"
                         android:layout_alignParentRight="true"
                         android:layout_below="@id/iv_cover"
                         android:layout_marginRight="@dimen/fab_margin"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/btn_follow"
                         android:text="关注"
-                        android:textColor="@color/colorHighlight"
+                        android:textColor="@drawable/btn_follow_text"
                         android:textSize="14dp"/>
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -123,26 +123,26 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/tv_location"
-                            android:layout_marginTop="6dp"
+                            android:layout_marginTop="8dp"
                             android:textColor="@color/colorTextLevel1"
                             android:textSize="14sp"
                             android:text="@{user.description}"/>
 
                         <TextView
-                            android:id="@+id/tv_follow"
+                            android:id="@+id/tv_friends"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/tv_info"
-                            android:layout_marginTop="6dp"
+                            android:layout_marginTop="8dp"
                             android:textColor="@color/colorTextLevel3"
                             android:textSize="12sp"
                             android:text="关注"/>
                         <TextView
-                            android:id="@+id/tv_follow_count"
+                            android:id="@+id/tv_friends_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_toRightOf="@id/tv_follow"
-                            android:layout_alignBottom="@id/tv_follow"
+                            android:layout_toRightOf="@id/tv_friends"
+                            android:layout_alignBottom="@id/tv_friends"
                             android:layout_marginLeft="4dp"
                             android:textStyle="bold"
                             android:textColor="@color/colorTextLevel1"
@@ -150,21 +150,21 @@
                             android:text="@{``+user.friends_count}"/>
 
                         <TextView
-                            android:id="@+id/tv_fans"
+                            android:id="@+id/tv_followers"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_toRightOf="@id/tv_follow_count"
-                            android:layout_alignBottom="@id/tv_follow"
+                            android:layout_toRightOf="@id/tv_friends_count"
+                            android:layout_alignBottom="@id/tv_friends"
                             android:layout_marginLeft="@dimen/fab_margin"
                             android:textColor="@color/colorTextLevel3"
                             android:textSize="12sp"
                             android:text="粉丝"/>
                         <TextView
-                            android:id="@+id/tv_fans_count"
+                            android:id="@+id/tv_followers_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_toRightOf="@id/tv_fans"
-                            android:layout_alignBottom="@id/tv_follow"
+                            android:layout_toRightOf="@id/tv_followers"
+                            android:layout_alignBottom="@id/tv_friends"
                             android:layout_marginLeft="4dp"
                             android:textStyle="bold"
                             android:textColor="@color/colorTextLevel1"
@@ -174,8 +174,8 @@
                             android:id="@+id/tv_statuses"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_toRightOf="@id/tv_fans_count"
-                            android:layout_alignBottom="@id/tv_follow"
+                            android:layout_toRightOf="@id/tv_followers_count"
+                            android:layout_alignBottom="@id/tv_friends"
                             android:layout_marginLeft="@dimen/fab_margin"
                             android:textColor="@color/colorTextLevel3"
                             android:textSize="12sp"
@@ -185,7 +185,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_toRightOf="@id/tv_statuses"
-                            android:layout_alignBottom="@id/tv_follow"
+                            android:layout_alignBottom="@id/tv_friends"
                             android:layout_marginLeft="4dp"
                             android:textStyle="bold"
                             android:textColor="@color/colorTextLevel1"
