--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,11 @@
     <dimen name="toolbar_icon_size">26dp</dimen>
     <dimen name="item_icon_size">20dp</dimen>
 
-    <dimen name="account_item_height">70dp</dimen>
+    <dimen name="btn_follow_width">80dp</dimen>
+    <dimen name="btn_follow_height">30dp</dimen>
+
+    <dimen name="item_account_height">70dp</dimen>
+    <dimen name="item_friendship_height">80dp</dimen>
+    <dimen name="item_head_size">50dp</dimen>
 
 </resources>
