--- a/app/src/main/res/layout/activity_status_detail.xml
+++ b/app/src/main/res/layout/activity_status_detail.xml
@@ -306,31 +306,75 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:paddingBottom="8dp"
-                android:paddingLeft="@dimen/fab_margin"
-                android:paddingRight="@dimen/fab_margin"
-                android:paddingTop="8dp"
-                android:background="@color/colorItemNormal">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:hint="添加评论"
-                    android:textColor="@color/colorTextLevel1"
-                    android:textColorHint="@color/colorTextLevel3"
-                    android:textSize="15sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingBottom="8dp"
+                    android:paddingLeft="@dimen/fab_margin"
+                    android:paddingRight="@dimen/fab_margin"
+                    android:paddingTop="8dp"
+                    android:background="@color/colorItemNormal">
 
-                <ImageView
-                    android:id="@+id/iv_commit"
-                    android:layout_width="@dimen/toolbar_icon_size"
-                    android:layout_height="@dimen/toolbar_icon_size"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_post_send" />
+                    <EditText
+                        android:id="@+id/et_content"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:hint="添加评论"
+                        android:textColor="@color/colorTextLevel1"
+                        android:textColorHint="@color/colorTextLevel3"
+                        android:textSize="15sp" />
+
+                    <ImageView
+                        android:id="@+id/iv_commit"
+                        android:layout_width="@dimen/toolbar_icon_size"
+                        android:layout_height="@dimen/toolbar_icon_size"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_post_send" />
+                </LinearLayout>
+                <RelativeLayout
+                    android:id="@+id/rl_additional"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingBottom="8dp"
+                    android:paddingLeft="@dimen/fab_margin"
+                    android:paddingRight="@dimen/fab_margin"
+                    android:paddingTop="8dp"
+                    android:visibility="gone"
+                    android:background="@color/colorItemNormal">
+                    <ImageView
+                        android:id="@+id/iv_emoj"
+                        android:layout_width="@dimen/toolbar_icon_size"
+                        android:layout_height="@dimen/toolbar_icon_size"
+                        android:layout_toRightOf="@id/iv_album"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_post_emoj" />
+                    <ImageView
+                        android:id="@+id/iv_at"
+                        android:layout_width="@dimen/toolbar_icon_size"
+                        android:layout_height="@dimen/toolbar_icon_size"
+                        android:layout_toRightOf="@id/iv_emoj"
+                        android:layout_marginLeft="@dimen/fab_margin"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_post_at"/>
+                    <TextView
+                        android:id="@+id/tv_status_length"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:text="140"
+                        android:textColor="@color/colorTextLevel3"
+                        android:textSize="12sp" />
+                </RelativeLayout>
+
             </LinearLayout>
+
         </android.support.design.widget.AppBarLayout>
 
     </LinearLayout>
