--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
 
     <dimen name="item_account_height">70dp</dimen>
     <dimen name="item_friendship_height">80dp</dimen>
+    <dimen name="item_direct_msg_height">70dp</dimen>
     <dimen name="item_head_size">50dp</dimen>
 
 </resources>
