1、夜间模式：调整在跳转到夜间模式时各组件的颜色变化

--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -9,6 +9,10 @@
         android:background="@color/colorBgNormal"
         android:orientation="vertical">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/statusbar_height"
+            android:background="@color/colorPrimaryDark"/>
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
