--- a/app/src/main/res/drawable/tv_chat_date.xml
+++ b/app/src/main/res/drawable/tv_chat_date.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
         android:radius="3dp"/>
-    <solid android:color="#ddd" />
+    <solid android:color="#CBCBCB" />
 </shape>
