--- a/app/src/main/res/layout/item_msg_right.xml
+++ b/app/src/main/res/layout/item_msg_right.xml
@@ -68,7 +68,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:textSize="16sp"
-            android:textColor="@color/colorTextLevel1"/>
+            android:textColor="#333333"/>
         <ImageView
             android:id="@+id/iv_picture"
             android:layout_width="wrap_content"
