1、"@我的"界面：增加"@我的"界面，包括@我的微博，@我的评论两个fragment

--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -155,8 +155,8 @@
             android:layout_toRightOf="@id/iv_status_head"
             android:layout_below="@id/tv_status_srceen_name"
             android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
             android:maxLines="2"
+            android:text="@{comment.status.text}"
             android:textColor="@color/colorTextLevel3"
             android:textSize="12sp" />
 
