--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,6 +82,14 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/fab_margin"
                         android:src="@drawable/ic_scan"/>
+                    <ImageView
+                        android:id="@+id/iv_search"
+                        android:layout_width="@dimen/toolbar_icon_size"
+                        android:layout_height="@dimen/toolbar_icon_size"
+                        android:layout_toLeftOf="@+id/iv_scan"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/fab_margin"
+                        android:src="@drawable/ic_search_gray"/>
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
