--- a/app/src/main/res/layout/item_msg_right.xml
+++ b/app/src/main/res/layout/item_msg_right.xml
@@ -15,7 +15,7 @@
     android:layout_height="wrap_content"
     android:background="@color/colorBgNormal"
     android:orientation="vertical"
-    android:paddingTop="16dp">
+    android:paddingBottom="16dp">
     
     <TextView
         android:id="@+id/tv_date"
