--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -94,23 +94,24 @@
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.widget.NestedScrollView
+        <!--<android.support.v4.widget.NestedScrollView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+            <!---->
+
+
+        <!--</android.support.v4.widget.NestedScrollView>-->
+
+        <FrameLayout
+            android:id="@+id/container_statuses"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_marginTop="?android:attr/actionBarSize"
+            android:background="@color/colorBgNormal">
 
-            <FrameLayout
-                android:id="@+id/container_statuses"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@color/colorBgNormal">
-
-            </FrameLayout>
-
-
-        </android.support.v4.widget.NestedScrollView>
-
+        </FrameLayout>
 
 
         <com.codez.collar.ui.ExpendButton
