--- a/app/src/main/res/layout/item_rv_footer.xml
+++ b/app/src/main/res/layout/item_rv_footer.xml
@@ -15,17 +15,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_info"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="更多"
+            android:textSize="14sp"
+            android:textColor="@color/colorTextLevel2"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp">
-            <TextView
-                android:id="@+id/tv_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="更多"
-                android:textSize="14sp"
-                android:textColor="@color/colorTextLevel2"/>
+
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/rl_normal"
