1、圆点指示器控件：自定义一个用于viewpager的圆点指示器控件； 2、表情界面：新增EmojiFragment,完成界面布局、测试完成表情界面集成到其他界面中，后序将补充EmojiFragment中的数据加载以及逻辑控制；

--- a/app/src/main/res/layout/activity_direct_msg.xml
+++ b/app/src/main/res/layout/activity_direct_msg.xml
@@ -92,12 +92,13 @@
                         android:layout_centerVertical="true"
                         android:src="@drawable/ic_post_send" />
                 </LinearLayout>
-                <RelativeLayout
+                <FrameLayout
                     android:id="@+id/rl_additional"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="210dp"
+                    android:visibility="gone"
                     android:background="@color/colorItemNormal">
-                </RelativeLayout>
+                </FrameLayout>
 
             </LinearLayout>
 
