--- a/app/src/main/res/layout/activity_image_detail.xml
+++ b/app/src/main/res/layout/activity_image_detail.xml
@@ -22,12 +22,23 @@
 
         </android.support.v4.view.ViewPager>
 
+        <com.codez.collar.ui.IndicatorView
+            android:id="@+id/indicatorView"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:gravity="center_horizontal"/>
+
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
+            android:visibility="gone"
             app:tabIndicatorHeight="0dp"
             app:tabMode="fixed"
             app:tabSelectedTextColor="#fff"
