1、微博主列表界面：修改ExpendButton弹出时的背景颜色

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,7 +41,7 @@
     <color name="layout_item_sel_night">#E4E4E4</color>
     <color name="layout_item_nol_night">@color/colorItemNormal_night</color>
 
-    <color name="background">#33000000</color>
+    <color name="bgExpendBtn">#33000000</color>
 
     <!--<color name="colorPrimary_night">#ce3d3a</color>-->
     <!--<color name="colorPrimaryDark_night">#ce3d4b</color>-->
